CCP-2059 Add Deposit Hint to products with deposits

--- a/frontend/locale/de-DE.json
+++ b/frontend/locale/de-DE.json
@@ -1,5 +1,6 @@
 {
   "separate_deposit": {
-    "plus": "zzgl."
+    "label": "zzgl. {deposit} Batteriepfand",
+    "cartLabel": "Batteriepfand"
   }
 }
